--- a/trainSocialApp/Base.lproj/Main.storyboard
+++ b/trainSocialApp/Base.lproj/Main.storyboard
@@ -81,22 +81,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="323" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wkl-8a-wZE">
-                                <rect key="frame" x="0.0" y="195" width="375" height="472"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="323" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wkl-8a-wZE">
+                                <rect key="frame" x="0.0" y="185" width="375" height="482"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="323" id="GeJ-ko-W9b">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="323" id="GeJ-ko-W9b" customClass="PostCell" customModule="trainSocialApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="323"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GeJ-ko-W9b" id="txe-PO-yN7">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="322"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="323"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hoa-o2-tdT">
-                                                    <rect key="frame" x="16" y="8" width="343" height="306"/>
+                                                    <rect key="frame" x="16" y="8" width="343" height="307"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="nNu-WF-7tC">
-                                                            <rect key="frame" x="8" y="8" width="327" height="255"/>
+                                                            <rect key="frame" x="8" y="8" width="327" height="256"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xhd-LH-FG6">
                                                                     <rect key="frame" x="0.0" y="0.0" width="327" height="50"/>
@@ -126,11 +126,14 @@
                                                                     </constraints>
                                                                 </stackView>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cute_monster_1" translatesAutoresizingMaskIntoConstraints="NO" id="oZj-5a-I0z">
-                                                                    <rect key="frame" x="0.0" y="50" width="327" height="155"/>
+                                                                    <rect key="frame" x="0.0" y="50" width="327" height="156"/>
                                                                 </imageView>
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="62S-df-cWg">
-                                                                    <rect key="frame" x="0.0" y="205" width="327" height="50"/>
+                                                                    <rect key="frame" x="0.0" y="206" width="327" height="50"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="6J8-9H-aje"/>
+                                                                    </constraints>
                                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -138,7 +141,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tSf-dd-dYL">
-                                                            <rect key="frame" x="270" y="268" width="65" height="30"/>
+                                                            <rect key="frame" x="270" y="269" width="65" height="30"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5to-jf-cZZ">
                                                                     <rect key="frame" x="0.0" y="0.0" width="39.5" height="30"/>
@@ -158,6 +161,7 @@
                                                             </constraints>
                                                         </stackView>
                                                     </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstItem="nNu-WF-7tC" firstAttribute="leading" secondItem="Hoa-o2-tdT" secondAttribute="leading" constant="8" id="3DW-kH-l93"/>
                                                         <constraint firstAttribute="trailing" secondItem="tSf-dd-dYL" secondAttribute="trailing" constant="8" id="A6I-5W-cn2"/>
@@ -168,6 +172,7 @@
                                                     </constraints>
                                                 </view>
                                             </subviews>
+                                            <color key="backgroundColor" red="0.81176470590000005" green="0.84705882349999995" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="Hoa-o2-tdT" secondAttribute="bottom" constant="8" id="GR3-0Q-RZK"/>
                                                 <constraint firstItem="Hoa-o2-tdT" firstAttribute="leading" secondItem="txe-PO-yN7" secondAttribute="leading" constant="16" id="c3h-qE-UBA"/>
@@ -175,15 +180,26 @@
                                                 <constraint firstAttribute="trailing" secondItem="Hoa-o2-tdT" secondAttribute="trailing" constant="16" id="z0Z-fS-JqG"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="caption" destination="62S-df-cWg" id="qcx-5n-G5u"/>
+                                            <outlet property="likesLbl" destination="Nma-Me-ikn" id="HAR-vt-BR5"/>
+                                            <outlet property="postImg" destination="oZj-5a-I0z" id="4ys-y4-WzJ"/>
+                                            <outlet property="profileImg" destination="aey-0e-KdQ" id="QRY-gv-sqh"/>
+                                            <outlet property="userNameLbl" destination="DHa-iB-4J4" id="Dpe-nT-KAX"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eZb-Sd-vI1">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sign-out" translatesAutoresizingMaskIntoConstraints="NO" id="seJ-xt-CRJ">
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sign-out" translatesAutoresizingMaskIntoConstraints="NO" id="seJ-xt-CRJ">
                                         <rect key="frame" x="8" y="16" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="1Zu-zH-opV" appends="YES" id="f6O-om-tax"/>
+                                        </connections>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -199,6 +215,7 @@
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="Anj-nq-aEP">
                                                 <rect key="frame" x="0.0" y="0.0" width="69" height="69"/>
+                                                <color key="backgroundColor" red="0.0" green="0.73725490199999999" blue="0.83137254900000002" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="69" id="7ER-jI-Snk"/>
                                                 </constraints>
@@ -211,6 +228,7 @@
                                             </textField>
                                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qoT-BV-bsg">
                                                 <rect key="frame" x="258" y="0.0" width="69" height="69"/>
+                                                <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="69" id="dty-b4-0tp"/>
                                                 </constraints>
@@ -219,7 +237,7 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" red="0.81176470590000005" green="0.84705882349999995" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="lwL-Ms-DCP" firstAttribute="top" secondItem="5Wc-JQ-SSO" secondAttribute="top" constant="8" id="0Sg-2X-Whz"/>
                                     <constraint firstAttribute="bottom" secondItem="lwL-Ms-DCP" secondAttribute="bottom" constant="8" id="M2t-p0-DTG"/>
@@ -229,6 +247,7 @@
                                 </constraints>
                             </view>
                         </subviews>
+                        <color key="backgroundColor" red="0.81176470590000005" green="0.84705882349999995" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="5Wc-JQ-SSO" firstAttribute="leading" secondItem="g5B-KA-cuJ" secondAttribute="leading" constant="16" id="6hX-El-uSK"/>
                             <constraint firstItem="eZb-Sd-vI1" firstAttribute="leading" secondItem="g5B-KA-cuJ" secondAttribute="leading" id="EJV-Vh-dtw"/>
@@ -236,17 +255,23 @@
                             <constraint firstItem="wkl-8a-wZE" firstAttribute="leading" secondItem="g5B-KA-cuJ" secondAttribute="leading" id="SeT-7B-03N"/>
                             <constraint firstAttribute="trailing" secondItem="eZb-Sd-vI1" secondAttribute="trailing" id="U1D-ka-8Cv"/>
                             <constraint firstItem="eZb-Sd-vI1" firstAttribute="top" secondItem="g5B-KA-cuJ" secondAttribute="top" id="UA4-f0-Q1V"/>
-                            <constraint firstItem="wkl-8a-wZE" firstAttribute="top" secondItem="5Wc-JQ-SSO" secondAttribute="bottom" constant="20" id="VI6-RY-9k2"/>
+                            <constraint firstItem="wkl-8a-wZE" firstAttribute="top" secondItem="5Wc-JQ-SSO" secondAttribute="bottom" constant="10" id="VI6-RY-9k2"/>
                             <constraint firstItem="iN9-HW-o8b" firstAttribute="top" secondItem="wkl-8a-wZE" secondAttribute="bottom" id="Vkj-Fw-VFY"/>
                             <constraint firstAttribute="trailing" secondItem="wkl-8a-wZE" secondAttribute="trailing" id="gRa-ki-gS3"/>
                             <constraint firstAttribute="trailing" secondItem="5Wc-JQ-SSO" secondAttribute="trailing" constant="16" id="pXO-Bs-T5b"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="tableView" destination="wkl-8a-wZE" id="Q6i-zQ-dBG"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignIn" id="9lO-Qf-JBX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JfH-7T-g2Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="1Zu-zH-opV">
+                    <connections>
+                        <action selector="signOutTapped:" destination="Txl-pN-FMo" id="Htg-CN-GcC"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1061.5999999999999" y="121.88905547226388"/>
         </scene>
