--- a/trainSocialApp/Base.lproj/Main.storyboard
+++ b/trainSocialApp/Base.lproj/Main.storyboard
@@ -103,6 +103,7 @@
                                                                     <subviews>
                                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Y" translatesAutoresizingMaskIntoConstraints="NO" id="aey-0e-KdQ">
                                                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                                            <gestureRecognizers/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="50" id="1h4-wo-ODZ"/>
                                                                             </constraints>
@@ -128,7 +129,7 @@
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cute_monster_1" translatesAutoresizingMaskIntoConstraints="NO" id="oZj-5a-I0z">
                                                                     <rect key="frame" x="0.0" y="50" width="327" height="156"/>
                                                                 </imageView>
-                                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="62S-df-cWg">
+                                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="62S-df-cWg">
                                                                     <rect key="frame" x="0.0" y="206" width="327" height="50"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <constraints>
@@ -182,6 +183,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="caption" destination="62S-df-cWg" id="qcx-5n-G5u"/>
+                                            <outlet property="likesImg" destination="vV8-X9-R4W" id="vNl-FC-ENT"/>
                                             <outlet property="likesLbl" destination="Nma-Me-ikn" id="HAR-vt-BR5"/>
                                             <outlet property="postImg" destination="oZj-5a-I0z" id="4ys-y4-WzJ"/>
                                             <outlet property="profileImg" destination="aey-0e-KdQ" id="QRY-gv-sqh"/>
@@ -213,12 +215,16 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lwL-Ms-DCP">
                                         <rect key="frame" x="8" y="8" width="327" height="69"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="Anj-nq-aEP">
+                                            <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add-image" translatesAutoresizingMaskIntoConstraints="NO" id="Anj-nq-aEP">
                                                 <rect key="frame" x="0.0" y="0.0" width="69" height="69"/>
                                                 <color key="backgroundColor" red="0.0" green="0.73725490199999999" blue="0.83137254900000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                <gestureRecognizers/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="69" id="7ER-jI-Snk"/>
                                                 </constraints>
+                                                <connections>
+                                                    <outletCollection property="gestureRecognizers" destination="GeN-ZL-CJ7" appends="YES" id="cLy-hb-2tP"/>
+                                                </connections>
                                             </imageView>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add acaption" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vA3-1u-py3">
                                                 <rect key="frame" x="69" y="0.0" width="189" height="69"/>
@@ -233,6 +239,9 @@
                                                     <constraint firstAttribute="width" constant="69" id="dty-b4-0tp"/>
                                                 </constraints>
                                                 <state key="normal" image="add-post"/>
+                                                <connections>
+                                                    <action selector="postBtnTapped:" destination="Txl-pN-FMo" eventType="touchUpInside" id="BF0-4q-2cj"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -262,6 +271,8 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="captionField" destination="vA3-1u-py3" id="kLv-tY-TvR"/>
+                        <outlet property="imageAdd" destination="Anj-nq-aEP" id="zzD-yz-nQ6"/>
                         <outlet property="tableView" destination="wkl-8a-wZE" id="Q6i-zQ-dBG"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignIn" id="9lO-Qf-JBX"/>
                     </connections>
@@ -270,6 +281,11 @@
                 <tapGestureRecognizer id="1Zu-zH-opV">
                     <connections>
                         <action selector="signOutTapped:" destination="Txl-pN-FMo" id="Htg-CN-GcC"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="GeN-ZL-CJ7">
+                    <connections>
+                        <action selector="addImageTapped:" destination="Txl-pN-FMo" id="ZLx-IS-12H"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
